feat: Add Toast de mensagens

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-top-menu *ngIf="isMainMenuVisible"></app-top-menu>
 
+<p-toast></p-toast>
+
 <div *ngIf="isAdminMenuVisible" class="ui-g-12 ui-md-6 ui-lg-2">
     <app-admin-menu></app-admin-menu>
 </div>
