--- a/src/app/components/animal/animal-detail/animal-detail.component.html
+++ b/src/app/components/animal/animal-detail/animal-detail.component.html
@@ -2,52 +2,59 @@
     <p-card>
         <div class="ui-g">
             <div class="ui-g-12 ui-md-5 ui-lg-3">
-                <div class="card animals-card">
-                    <img [src]="animal.BIN_FOTO" class="image-card"/>  
+                <div class="ui-g-12"><h4 class="titulo">Olá, eu sou o {{animal.NOM_ANIMAL}}</h4></div>
+                <div class="ui-g-12">
+                    <div class="card animals-card">
+                        <img [src]="animal.BIN_FOTO" class="image-card"/>  
+                    </div>
                 </div>
             </div>
             <div class="ui-g-12 ui-md-7 ui-lg-9 ui-g-nopad">
-                <div class="ui-g-12">
-                    <h3>Dados do bichinho</h3>
+                <div class="ui-g-12 ui-g-nopad">
+                    <h3 class="titulo">Algumas informações sobre mim!!!</h3>
                 </div>
                 <div class="ui-g-12 ui-g-nopad">
                     <table class="table">
                         <thead class="thead-dark">
                             <tr>
-                            <th scope="col">NOME</th>
-                            <th scope="col">SEXO</th>
-                            <th scope="col">ESPÉCIE</th>
-                            <th scope="col">IDADE</th>
-                            <th scope="col">INSTITUIÇÃO</th>
+                                <th scope="col">SEXO</th>
+                                <th scope="col">ESPÉCIE</th>
+                                <th scope="col">IDADE</th>
+                                <th scope="col">CASTRADO</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">{{ animal.NOM_ANIMAL }}</th>
-                                    <td>{{ animal.IND_SEXO_ANIMAL }}</td>
-                                    <td>{{ animal.DES_ESPECIE }}</td>
-                                    <td>{{ animal.IND_IDADE }}</td>
-                                <th scope="row">{{ animal.NOM_INSTITUICAO }}</th>
-                            
+                                <td>{{ animal.IND_SEXO_ANIMAL }}</td>
+                                <td>{{ animal.DES_ESPECIE }}</td>
+                                <td>{{ animal.IND_IDADE }}</td>
+                                <td>{{ animal.IND_CASTRADO }}</td>
+                            </tr>                            
                         </tbody>
                     </table>
                     <table class="table">
                         <thead class="thead-light">
                             <tr>
-                            <th scope="col">PORTE</th>
-                            <th scope="col">CASTRADO</th>
-                            <th scope="col">VACINA</th>
-                            <th scope="col">OBSERVAÇÃO</th>
+                                <th scope="col">PORTE</th>
+                                <th scope="col">VACINA</th>
+                                <th scope="col">OBSERVAÇÃO</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>                            
                                 <td>{{ animal.IND_PORTE_ANIMAL }}</td>
-                                <td>{{ animal.IND_CASTRADO }}</td>
                                 <td>{{ animal.DES_VACINA }}</td>
                                 <td>{{ animal.DES_OBSERVACAO }}</td>
                         </tbody>
                     </table>
+                </div>
+                <div class="ui-g-12 ui-g-nopad">
+                    <h3 class="titulo">Gostou de mim? Gostaria de me adotar?</h3>
+                    <h2 class="titulo">Entre em contato</h2>
+                    <p-card class="card">
+                        <p class="detalhe">Minha familia hoje: {{ animal.NOM_INSTITUICAO }} </p>
+                        <p class="detalhe">Telefone para contato: XXXX-XXXX</p>
+                    </p-card>
                 </div>
             </div>
         </div>                      
