--- a/src/app/components/animal/animal-detail/animal-detail.component.scss
+++ b/src/app/components/animal/animal-detail/animal-detail.component.scss
@@ -7,3 +7,16 @@
     width: 15rem; 
     height: 20rem;
 }
+
+.titulo{
+    font-style: italic;
+    font-weight: bold;
+    font-size: 20px;
+    font-family: Apple Chancery;
+    text-align: center;
+}
+
+.detalhe{
+    font-size: 15px;
+    font-family:Blippo, Apple Chancery;
+}
