--- a/src/app/components/animal/animal-form/animal-form.component.html
+++ b/src/app/components/animal/animal-form/animal-form.component.html
@@ -2,7 +2,7 @@
     <div class="card">
         <h3>{{ title }}</h3>
         <div class="grid">
-            <button type="button" class="btn btn-dark" (click)="deleteAnimal()">Excluir</button>
+            <button *ngIf="animal.COD_ANIMAL" type="button" class="btn btn-dark" (click)="deleteAnimal()">Excluir</button>
         </div>
         <div class="grid">
             <div class="ui-g-6 ui-md-6 ui-lg-6">
