--- a/src/app/components/animal/animal-form/animal-form.component.html
+++ b/src/app/components/animal/animal-form/animal-form.component.html
@@ -6,50 +6,66 @@
                 (click)="deleteAnimal()">Excluir</button>
         </div>
         <div class="grid">
-            <div class="ui-g-6 ui-md-6 ui-lg-6">
-                <label for="name">Nome*:</label>
-                <input id="name" type="text" class="form-control" [(ngModel)]="animal.NOM_ANIMAL">
+            
+            <div class="form-row">
+                <div class="col">
+                    <label for="name">Nome*:</label>
+                    <input id="name" type="text" class="form-control" [(ngModel)]="animal.NOM_ANIMAL">
+                </div>
+                <div class="col">
+                    <label for="especie">Espécie*:</label>
+                    <select id="especie" class="custom-select" [(ngModel)]="animal.ESPECIE_COD_ESPECIE">
+                        <option *ngFor="let especie of especies" [value]="especie.value">{{ especie.label }}</option>
+                    </select>
+                </div>
             </div>
-            <div class="ui-g-6 ui-md-6 ui-lg-6">
-                <label for="especie">Espécie*:</label>
-                <select id="especie" class="custom-select" [(ngModel)]="animal.ESPECIE_COD_ESPECIE">
-                    <option *ngFor="let especie of especies" [value]="especie.value">{{ especie.label }}</option>
-                </select>
-            </div>
-            <div class="ui-g-6 ui-md-6 ui-lg-6">
-                <label for="idade">Idade*:</label>
-                <select id="idade" class="custom-select" [(ngModel)]="animal.IND_IDADE">
-                    <option *ngFor="let idade of idades" [value]="idade.value">{{ idade.label }}</option>
-                </select>
-            </div>
-            <div class="ui-g-6 ui-md-6 ui-lg-6">
-                <label for="porte">Porte*:</label>
-                <select id="porte" class="custom-select" [(ngModel)]="animal.IND_PORTE_ANIMAL">
-                    <option *ngFor="let porte of portes" [value]="porte.value">{{ porte.label }}</option>
-                </select>
-            </div>
-            <div class="ui-g-6 ui-md-6 ui-lg-6">
-                <label for="sexo">Sexo*:</label>
-                <select id="sexo" class="custom-select" [(ngModel)]="animal.IND_SEXO_ANIMAL">
-                    <option *ngFor="let sexo of sexos" [value]="sexo.value">{{ sexo.label }}</option>
-                </select>
-            </div>
-            <div class="ui-g-6 ui-md-6 ui-lg-6">
-                <label for="castrado">Castrado*:</label>
-                <select id="castrado" class="custom-select" [(ngModel)]="animal.IND_CASTRADO">
-                    <option *ngFor="let castrado of castradoOptions" [value]="castrado.value">{{ castrado.label }}
-                    </option>
-                </select>
-            </div>
-            <div class="ui-g-6 ui-md-6 ui-lg-6">
-                <label for="instituicao">Instituição*:</label>
-                <select id="instituicao" class="custom-select" [(ngModel)]="animal.INSTITUICAO_COD_INSTITUICAO">
-                    <option *ngFor="let institution of institutions" [value]="institution.COD_INSTITUICAO">{{ institution.NOM_INSTITUICAO }}</option>
-                </select>
-            </div>
-            <div class="ui-g-6 ui-md-6 ui-lg-6">
 
+            <div class="form-row">
+                <div class="col">
+                    <label for="idade">Idade*:</label>
+                    <select id="idade" class="custom-select" [(ngModel)]="animal.IND_IDADE">
+                        <option *ngFor="let idade of idades" [value]="idade.value">{{ idade.label }}</option>
+                    </select>
+                </div>
+                <div class="col">
+                    <label for="porte">Porte*:</label>
+                    <select id="porte" class="custom-select" [(ngModel)]="animal.IND_PORTE_ANIMAL">
+                        <option *ngFor="let porte of portes" [value]="porte.value">{{ porte.label }}</option>
+                    </select>
+                </div>
             </div>
+
+            <div class="form-row">
+                <div class="col">
+                    <label for="sexo">Sexo*:</label>
+                    <select id="sexo" class="custom-select" [(ngModel)]="animal.IND_SEXO_ANIMAL">
+                        <option *ngFor="let sexo of sexos" [value]="sexo.value">{{ sexo.label }}</option>
+                    </select>
+                </div>
+                <div class="col">
+                    <label for="castrado">Castrado*:</label>
+                    <select id="castrado" class="custom-select" [(ngModel)]="animal.IND_CASTRADO">
+                        <option *ngFor="let castrado of castradoOptions" [value]="castrado.value">{{ castrado.label }}
+                        </option>
+                    </select>
+                </div>
+            </div>
+
+            <div class="form-row">
+                <div class="col">
+                    <label for="instituicao">Instituição*:</label>
+                    <select id="instituicao" class="custom-select" [(ngModel)]="animal.INSTITUICAO_COD_INSTITUICAO">
+                        <option *ngFor="let institution of institutions" [value]="institution.COD_INSTITUICAO">
+                            {{ institution.NOM_INSTITUICAO }}</option>
+                    </select>
+                </div>
+                <div class="col">
+
+                </div>
+            </div>
+
+
+
         </div>
         <div class="grid">
             <button type="button" class="btn btn-dark" (click)="saveAnimal()">Salvar</button>
