Fix: corrige nome da classe

--- a/src/app/components/animal/animal-detail/animal-detail.component.html
+++ b/src/app/components/animal/animal-detail/animal-detail.component.html
@@ -2,7 +2,7 @@
     <p-card>
         <div class="ui-g">
             <div class="ui-g-12 ui-md-5 ui-lg-3">
-                <div class="ui-g-12"><h4 class="titulo">Olá, eu sou o {{animal.NOM_ANIMAL}}</h4></div>
+                <div class="ui-g-12"><h4 class="title">Olá, eu sou o {{animal.NOM_ANIMAL}}</h4></div>
                 <div class="ui-g-12">
                     <div class="card animals-card">
                         <img [src]="animal.BIN_FOTO" class="image-card"/>  
@@ -11,7 +11,7 @@
             </div>
             <div class="ui-g-12 ui-md-7 ui-lg-9 ui-g-nopad">
                 <div class="ui-g-12 ui-g-nopad">
-                    <h3 class="titulo">Algumas informações sobre mim!!!</h3>
+                    <h3 class="title">Algumas informações sobre mim!!!</h3>
                 </div>
                 <div class="ui-g-12 ui-g-nopad">
                     <table class="table">
@@ -49,11 +49,11 @@
                     </table>
                 </div>
                 <div class="ui-g-12 ui-g-nopad">
-                    <h3 class="titulo">Gostou de mim? Gostaria de me adotar?</h3>
-                    <h2 class="titulo">Entre em contato</h2>
+                    <h3 class="title">Gostou de mim? Gostaria de me adotar?</h3>
+                    <h2 class="title">Entre em contato</h2>
                     <p-card class="card">
-                        <p class="detalhe">Minha familia hoje: {{ animal.NOM_INSTITUICAO }} </p>
-                        <p class="detalhe">Telefone para contato: XXXX-XXXX</p>
+                        <p class="detail">Minha familia hoje: {{ animal.NOM_INSTITUICAO }} </p>
+                        <p class="detail">Telefone para contato: XXXX-XXXX</p>
                     </p-card>
                 </div>
             </div>
