--- a/src/app/components/animal/animal-detail/animal-detail.component.scss
+++ b/src/app/components/animal/animal-detail/animal-detail.component.scss
@@ -8,7 +8,7 @@
     height: 20rem;
 }
 
-.titulo{
+.title{
     font-style: italic;
     font-weight: bold;
     font-size: 20px;
@@ -16,7 +16,7 @@
     text-align: center;
 }
 
-.detalhe{
+.detail{
     font-size: 15px;
     font-family:Blippo, Apple Chancery;
 }
