--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,17 @@ input:focus {
     border-color: gray !important;
 }
 
+textarea {
+    outline: none;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
+}
+
+textarea:focus {
+    border-color: gray !important;
+}
+
 select {
     outline: none;
     -webkit-box-shadow: none !important;
