--- a/src/app/components/animal/animal-form/animal-form.component.scss
+++ b/src/app/components/animal/animal-form/animal-form.component.scss
@@ -10,3 +10,8 @@
 .btn {
     margin-left: 10px !important;
 }
+
+.image-preview {
+    max-width: 60% !important; 
+    max-height: 40% !important;
+}
