--- a/src/app/components/animal/animal-detail/animal-detail.component.html
+++ b/src/app/components/animal/animal-detail/animal-detail.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <p-card>
         <div class="ui-g">
-            <div class="ui-g-12 ui-md-5 ui-lg-3">
+            <div class="ui-g-12 ui-md-5 ui-lg-4">
                 <div class="ui-g-12"><h4 class="title">Olá, eu sou o {{animal.NOM_ANIMAL}}</h4></div>
                 <div class="ui-g-12">
                     <div class="card animals-card">
@@ -9,9 +9,9 @@
                     </div>
                 </div>
             </div>
-            <div class="ui-g-12 ui-md-7 ui-lg-9 ui-g-nopad">
+            <div class="ui-g-12 ui-md-7 ui-lg-8 ui-g-nopad">
                 <div class="ui-g-12 ui-g-nopad">
-                    <h3 class="title">Algumas informações sobre mim!!!</h3>
+                    <h3 class="title">Algumas informações sobre mim:</h3>
                 </div>
                 <div class="ui-g-12 ui-g-nopad">
                     <table class="table">
