feat: Add telefone da instituição - detalhes animal

--- a/src/app/components/animal/animal-detail/animal-detail.component.html
+++ b/src/app/components/animal/animal-detail/animal-detail.component.html
@@ -53,7 +53,7 @@
                     <h2 class="title">Entre em contato</h2>
                     <p-card class="card">
                         <p class="detail">Minha familia hoje: {{ animal.NOM_INSTITUICAO }} </p>
-                        <p class="detail">Telefone para contato: XXXX-XXXX</p>
+                        <p class="detail">Telefone para contato: {{ institution.NUM_TELEFONE }}</p>
                     </p-card>
                 </div>
             </div>
