feat: Permite selecionar somente imagens

--- a/src/app/components/animal/animal-form/animal-form.component.html
+++ b/src/app/components/animal/animal-form/animal-form.component.html
@@ -80,7 +80,8 @@
             <div class="form-row">
                 <div class="col">
                     <label>Foto*:</label>
-                    <input type="file" (change)="fileChangeEvent($event)" style="width: 100% !important;" />
+                    <input type="file" (change)="fileChangeEvent($event)" style="width: 100% !important;"
+                        accept="image/png, image/jpeg" />
                 </div>
                 <div class="col">
                     <div class="image-preview">
