--- a/src/app/components/animal/animal-detail/animal-detail.component.html
+++ b/src/app/components/animal/animal-detail/animal-detail.component.html
@@ -1,62 +1,64 @@
 <div class="container">
-    <p-card>
-        <div class="ui-g">
-            <div class="ui-g-12 ui-md-5 ui-lg-4">
-                <div class="ui-g-12"><h4 class="title">Olá, eu sou o {{animal.NOM_ANIMAL}}</h4></div>
-                <div class="ui-g-12">
-                    <div class="card animals-card">
-                        <img [src]="animal.BIN_FOTO" class="image-card"/>  
+    <div class="card">
+        <div class="card-body">
+            <div class="ui-g">
+                <div class="ui-g-12 ui-md-5 ui-lg-4">
+                    <div class="ui-g-12">
+                        <h4 class="title">Olá, eu sou o {{animal.NOM_ANIMAL}}</h4>
+                    </div>
+                    <div class="d-flex justify-content-center ui-g-12">
+                        <img *ngIf="animal.BIN_FOTO" [src]="animal.BIN_FOTO" class="image-card" />
+                    </div>
+                </div>
+                <div class="ui-g-12 ui-md-7 ui-lg-8 ui-g-nopad">
+                    <div class="ui-g-12 ui-g-nopad">
+                        <h3 class="title">Algumas informações sobre mim:</h3>
+                    </div>
+                    <div class="ui-g-12 ui-g-nopad">
+                        <table class="table">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th scope="col">SEXO</th>
+                                    <th scope="col">ESPÉCIE</th>
+                                    <th scope="col">IDADE</th>
+                                    <th scope="col">CASTRADO</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>{{ animal.IND_SEXO_ANIMAL }}</td>
+                                    <td>{{ animal.DES_ESPECIE }}</td>
+                                    <td>{{ animal.IND_IDADE }}</td>
+                                    <td>{{ animal.IND_CASTRADO }}</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <table class="table">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">PORTE</th>
+                                    <th scope="col">VACINA</th>
+                                    <th scope="col">OBSERVAÇÃO</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>{{ animal.IND_PORTE_ANIMAL }}</td>
+                                    <td>{{ animal.DES_VACINA }}</td>
+                                    <td>{{ animal.DES_OBSERVACAO }}</td>
+                            </tbody>
+                        </table>
+                    </div>
+                    <div class="ui-g-12 ui-g-nopad">
+                        <h3 class="title">Gostou de mim? Gostaria de me adotar?</h3>
+                        <h2 class="title">Entre em contato</h2>
+                        <p-card class="card">
+                            <p class="detail">Minha familia hoje: {{ animal.NOM_INSTITUICAO }} </p>
+                            <p class="detail">Telefone para contato: {{ institution.NUM_TELEFONE }}</p>
+                        </p-card>
                     </div>
                 </div>
             </div>
-            <div class="ui-g-12 ui-md-7 ui-lg-8 ui-g-nopad">
-                <div class="ui-g-12 ui-g-nopad">
-                    <h3 class="title">Algumas informações sobre mim:</h3>
-                </div>
-                <div class="ui-g-12 ui-g-nopad">
-                    <table class="table">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th scope="col">SEXO</th>
-                                <th scope="col">ESPÉCIE</th>
-                                <th scope="col">IDADE</th>
-                                <th scope="col">CASTRADO</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>{{ animal.IND_SEXO_ANIMAL }}</td>
-                                <td>{{ animal.DES_ESPECIE }}</td>
-                                <td>{{ animal.IND_IDADE }}</td>
-                                <td>{{ animal.IND_CASTRADO }}</td>
-                            </tr>                            
-                        </tbody>
-                    </table>
-                    <table class="table">
-                        <thead class="thead-light">
-                            <tr>
-                                <th scope="col">PORTE</th>
-                                <th scope="col">VACINA</th>
-                                <th scope="col">OBSERVAÇÃO</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>                            
-                                <td>{{ animal.IND_PORTE_ANIMAL }}</td>
-                                <td>{{ animal.DES_VACINA }}</td>
-                                <td>{{ animal.DES_OBSERVACAO }}</td>
-                        </tbody>
-                    </table>
-                </div>
-                <div class="ui-g-12 ui-g-nopad">
-                    <h3 class="title">Gostou de mim? Gostaria de me adotar?</h3>
-                    <h2 class="title">Entre em contato</h2>
-                    <p-card class="card">
-                        <p class="detail">Minha familia hoje: {{ animal.NOM_INSTITUICAO }} </p>
-                        <p class="detail">Telefone para contato: {{ institution.NUM_TELEFONE }}</p>
-                    </p-card>
-                </div>
-            </div>
-        </div>                      
-    </p-card>
+        </div>
+    </div>
 </div>
