--- a/src/app/components/animal/animal-detail/animal-detail.component.scss
+++ b/src/app/components/animal/animal-detail/animal-detail.component.scss
@@ -13,5 +13,26 @@
 
 .detail{
     font-size: 15px;
-    font-family:Blippo, Apple Chancery;
+    font-family:Bradley Hand, cursive;
+}
+
+.effect{
+    padding-top: 30px;
+}
+
+.effect_back{
+    padding-top: 30px;
+    padding-bottom: 40px;
+}
+
+.back_email{
+    padding-bottom: 10px;
+}
+
+#responsive{
+    width: 95%;
+}
+
+#responsiveTextArea{
+    width: 100%;
 }
