--- a/src/app/components/animal/animal-detail/animal-detail.component.html
+++ b/src/app/components/animal/animal-detail/animal-detail.component.html
@@ -41,7 +41,7 @@
                     </div> 
                     <div class="ui-g-12 ui-g-nopad effect">
                         <h3 class="title">Gostou de mim? Gostaria de me adotar?</h3>
-                        <h2 class="title">Entre em contato</h2>
+                        <h2 class="title">Entre em contato:</h2>
                         <p-card class="card">
                             <div class="ui-g-12 ui-md-6 ui-lg-6 ui-g-nopad effect">
                                 <p class="detail">Minha familia hoje: {{ animal.NOM_INSTITUICAO }} </p>
