Feat: Padroniza fontes

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,13 +1,13 @@
-<div class="container">
+<div id="body" class="container">
     <div class="card">
         <div class="card-body">
-            <h1>Quem Somos</h1>
-            <p>
+            <h1 class="title">Quem Somos</h1>
+            <p class="detail">
                 O Miaudote é um site criado com a finalidade de promover a adoção de cães e 
                 gatos que foram abandonados, informando, também, sobre guarda responsável e 
                 suas implicações.
             </p>
-            <p>
+            <p class="detail">
                 O idealizador do site é o professor Leonardo Rago e os criadores da página 
                 são os alunos do projeto de extensão InformaCão, do curso de Medicina Veterinaria, 
                 em conjunto com os alunos do curso de Sistemas de Informação, orientados pelo professor 
