--- a/src/app/components/animal/animal-detail/animal-detail.component.html
+++ b/src/app/components/animal/animal-detail/animal-detail.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div id="body" class="container">
     <div class="card">
         <div class="card-body">
             <div class="ui-g">
@@ -42,14 +42,14 @@
                     <div class="ui-g-12 ui-g-nopad effect">
                         <h3 class="title">Gostou de mim? Gostaria de me adotar?</h3>
                         <h2 class="title">Entre em contato:</h2>
-                        <p-card class="card">
-                            <div class="ui-g-12 ui-md-6 ui-lg-6 ui-g-nopad effect">
+                        <p-card class="card align_center">
+                            <div class="ui-g-12 ui-md-6 ui-lg-6 ui-g-nopad">
                                 <p class="detail">Minha familia hoje: {{ animal.NOM_INSTITUICAO }} </p>
                             </div>
-                            <div class="ui-g-12 ui-md-6 ui-lg-6 ui-g-nopad effect">
+                            <div class="ui-g-12 ui-md-6 ui-lg-6 ui-g-nopad">
                                 <p class="detail">Telefone para contato: {{ institution.NUM_TELEFONE }}</p>
                             </div>
-                            <div class="ui-g-12 ui-md-6 ui-lg-12 ui-g-nopad back_email">
+                            <div class="ui-g-12 ui-md-6 ui-lg-6 ui-g-nopad back_email">
                                 <p class="detail">E-mail: {{ institution.DES_EMAIL }}</p>
                             </div>
                         </p-card>
