--- a/src/app/components/how-to-adopt/how-to-adopt.component.html
+++ b/src/app/components/how-to-adopt/how-to-adopt.component.html
@@ -1,21 +1,20 @@
-<div class="container">
+<div id="body" class="container">
     <div class="card">
         <div class="card-body">
-            <h1>Como Adotar</h1>
-            <p>
+            <h1 class="title">Como Adotar</h1>
+            <p class="detail">
                 Fale conosco por e-mail (o que vocês criaram com o domínio miaudote) ou através do nosso instagram.
             </p>
             
-            <h2>Recomendações ao adotante:</h2>
-            <p>O animal requer atenção e possui necessidades que devem ser compreendidas.</p> 
-            <p>Por isso tenha certeza da decisão, converse com familiares (caso seja o caso) antes de adotar.</p>
+            <h2 class="title">Recomendações ao adotante:</h2>
+            <p class="detail">O animal requer atenção e possui necessidades que devem ser compreendidas.</p> 
+            <p class="detail">Por isso tenha certeza da decisão, converse com familiares (caso seja o caso) antes de adotar.</p>
             
             <h2>Requisitos para adoção:</h2>
-            <b>**Essas informações dependem da ONG**</b>
-            <p>-Ser maior de 18 anos ou estar acompanhado por um responsável.</p>
-            <p>-Identidade e CPF(original e cópia).</p>
-            <p>-Comprovante de Residência.</p>
-    
+            <b class="detail">**Essas informações dependem da ONG**</b>
+            <p class="detail">-Ser maior de 18 anos ou estar acompanhado por um responsável.</p>
+            <p class="detail">-Identidade e CPF(original e cópia).</p>
+            <p class="detail">-Comprovante de Residência.</p>
         </div>
     </div>    
 </div>
