--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -9,12 +9,26 @@
     width:100%;   
 }
 
+.title{
+    font-weight: bold;
+    font-size: 30px;
+    font-family: Apple Chancery;
+    text-align: left;
+}
+
+.detail{
+    font-size: 20px;
+    font-family:Bradley Hand, cursive;
+    color: #ffffff;
+}
+
 .social:hover {
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -o-transform: scale(1.1);
     transform: scale(1.1);
 }
+
 .social {
     -webkit-transform: scale(0.8);
     /* Browser Variations: */    
@@ -26,23 +40,9 @@
     -o-transition-duration: 0.5s;
     transition-duration: 0.5s;
 }
-/*
-   Multicoloured Hover Variations
-*/
-#social-fb:hover {
-    color: #3B5998;
-}
+
 #social-in:hover {
-    color: rgb(184, 53, 140);
-}
-#social-tw:hover {
-    color: #4099FF;
-}
-#social-gp:hover {
-    color: #d34836;
-}
-#social-em:hover {
-    color: #f39c12;
+    color: rgb(178, 59, 182);
 }
 
 #itens{
