--- a/src/app/components/how-to-adopt/how-to-adopt.component.scss
+++ b/src/app/components/how-to-adopt/how-to-adopt.component.scss
@@ -1,25 +1,16 @@
-.social:hover {
-    -webkit-transform: scale(1.1);
-    -moz-transform: scale(1.1);
-    -o-transform: scale(1.1);
-    transform: scale(1.1);
-}
-.social {
-    -webkit-transform: scale(0.8);
-    /* Browser Variations: */    
-    -moz-transform: scale(0.8);
-    -o-transform: scale(0.8);
-    transform: scale(0.8);
-    -webkit-transition-duration: 0.5s;
-    -moz-transition-duration: 0.5s;
-    -o-transition-duration: 0.5s;
-    transition-duration: 0.5s;
+.title{
+    font-style: italic;
+    font-weight: bold;
+    font-size: 50px;
+    font-family: Apple Chancery;
+    text-align: center;
 }
 
-#itens{
-    color: #000000
+.detail{
+    font-size: 25px;
+    font-family:Bradley Hand, cursive;
 }
 
-#social-in:hover {
-    color: rgb(255, 0, 0);
+#body{
+    padding-bottom: 8%;
 }
