--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,19 +8,23 @@
         <div class="col-xs-4 col-sm-4 col-md-4">
           <h3 class="text-white title">Contatos</h3>
           <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-4">
+              <p class="detail">E-mail / Instagram:</p>
+            </div> 
             <div class="col-xs-12 col-sm-12 col-md-8">
-              <p class="detail">Pelo nosso instagram:</p>
-            </div> 
-            <div class="col-xs-12 col-sm-12 col-md-2">
-              <ul class="list-unstyled list-inline social text-left">
-                <li *ngFor="let item of items" class="list-inline-item">
-                    <a id="itens" href="{{item.url}}" target="_blank"><i id="{{item.id}}" class="{{item.icon}}"></i></a>
-                </li>            
-              </ul>
+              <div class="row">
+                  <div class="col-xs-12 col-sm-12 col-md-3">
+                    <ul class="list-unstyled list-inline social text-left">
+                      <li *ngFor="let item of items" class="list-inline-item">
+                          <a id="itens" href="{{item.url}}" target="_blank"><i id="{{item.id}}" class="{{item.icon}}"></i></a>
+                      </li>            
+                    </ul>
+                  </div>
+                  <div class="col-xs-12 col-sm-12 col-md-9">
+                    <p class="detail">miaudote@gmail.com</p>
+                  </div> 
+              </div>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-12">
-              <p class="detail">Ou pelo e-mail: miaudote@gmail.com</p>
-            </div> 
           </div>
         </div>        
       </div>
